build based on 08516f6

--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -92,12 +92,11 @@ The following packages will be downloaded:
     harfbuzz-6.0.0             |       h8e241bc_0         1.2 MB  conda-forge
     icu-70.1                   |       h27087fc_0        13.5 MB  conda-forge
     jack-1.9.22                |       h11f4161_0         453 KB  conda-forge
-    jpeg-9e                    |       h0b41bf4_3         235 KB  conda-forge
     keyutils-1.6.1             |       h166bdaf_0         115 KB  conda-forge
     kiwisolver-1.4.4           |  py310hbf28c38_1          76 KB  conda-forge
     krb5-1.20.1                |       h81ceb04_0         1.3 MB  conda-forge
     lame-3.100                 |    h166bdaf_1003         496 KB  conda-forge
-    lcms2-2.15                 |       hfd0df8a_0         235 KB  conda-forge
+    lcms2-2.15                 |       haa2dc70_1         236 KB  conda-forge
     lerc-4.0.0                 |       h27087fc_0         275 KB  conda-forge
     libbrotlicommon-1.0.9      |       h166bdaf_8          66 KB  conda-forge
     libbrotlidec-1.0.9         |       h166bdaf_8          33 KB  conda-forge
@@ -115,6 +114,7 @@ The following packages will be downloaded:
     libglib-2.74.1             |       h606061b_1         3.1 MB  conda-forge
     libgpg-error-1.46          |       h620e276_0         252 KB  conda-forge
     libiconv-1.17              |       h166bdaf_0         1.4 MB  conda-forge
+    libjpeg-turbo-2.1.5.1      |       h0b41bf4_0         479 KB  conda-forge
     libllvm15-15.0.7           |       hadd5161_0        31.5 MB  conda-forge
     libogg-1.3.4               |       h7f98852_1         206 KB  conda-forge
     libopus-1.3.1              |       h7f98852_1         255 KB  conda-forge
@@ -122,7 +122,7 @@ The following packages will be downloaded:
     libpq-15.2                 |       hb675445_0         2.3 MB  conda-forge
     libsndfile-1.2.0           |       hb75c966_0         342 KB  conda-forge
     libsystemd0-252            |       h2a991cd_0         384 KB  conda-forge
-    libtiff-4.5.0              |       h6adf6a1_2         397 KB  conda-forge
+    libtiff-4.5.0              |       hddfeb54_5         397 KB  conda-forge
     libtool-2.4.7              |       h27087fc_0         402 KB  conda-forge
     libudev1-253               |       h0b41bf4_0         116 KB  conda-forge
     libvorbis-1.3.7            |       h9c3ff4c_0         280 KB  conda-forge
@@ -142,7 +142,7 @@ The following packages will be downloaded:
     openjpeg-2.5.0             |       hfec8fc6_2         344 KB  conda-forge
     packaging-23.0             |     pyhd8ed1ab_0          40 KB  conda-forge
     pcre2-10.40                |       hc3806b6_0         2.3 MB  conda-forge
-    pillow-9.4.0               |  py310h023d228_1        44.3 MB  conda-forge
+    pillow-9.4.0               |  py310h065c6d2_2        44.1 MB  conda-forge
     pixman-0.40.0              |       h36c2ea0_0         627 KB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
     pthread-stubs-0.4          |    h36c2ea0_1001           5 KB  conda-forge
@@ -151,7 +151,7 @@ The following packages will be downloaded:
     pyqt-5.15.7                |  py310hab646b1_3         5.0 MB  conda-forge
     pyqt5-sip-12.11.0          |  py310heca2aa9_3          83 KB  conda-forge
     python-dateutil-2.8.2      |     pyhd8ed1ab_0         240 KB  conda-forge
-    qt-main-5.15.8             |       h5d23da1_6        50.0 MB  conda-forge
+    qt-main-5.15.8             |       h67dfc38_7        50.0 MB  conda-forge
     sip-6.7.7                  |  py310heca2aa9_0         478 KB  conda-forge
     six-1.16.0                 |     pyh6c4a22f_0          14 KB  conda-forge
     toml-0.10.2                |     pyhd8ed1ab_0          18 KB  conda-forge
@@ -172,10 +172,11 @@ The following packages will be downloaded:
     xorg-libxrender-0.9.10     |    h7f98852_1003          32 KB  conda-forge
     xorg-renderproto-0.11.1    |    h7f98852_1002           9 KB  conda-forge
     xorg-xextproto-7.3.0       |    h0b41bf4_1003          30 KB  conda-forge
+    xorg-xf86vidmodeproto-2.3.1|    h7f98852_1002          23 KB  conda-forge
     xorg-xproto-7.0.31         |    h7f98852_1007          73 KB  conda-forge
     zlib-1.2.13                |       h166bdaf_4          92 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       240.4 MB
+                                           Total:       240.3 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -208,12 +209,11 @@ The following NEW packages will be INSTALLED:
   harfbuzz           conda-forge/linux-64::harfbuzz-6.0.0-h8e241bc_0
   icu                conda-forge/linux-64::icu-70.1-h27087fc_0
   jack               conda-forge/linux-64::jack-1.9.22-h11f4161_0
-  jpeg               conda-forge/linux-64::jpeg-9e-h0b41bf4_3
   keyutils           conda-forge/linux-64::keyutils-1.6.1-h166bdaf_0
   kiwisolver         conda-forge/linux-64::kiwisolver-1.4.4-py310hbf28c38_1
   krb5               conda-forge/linux-64::krb5-1.20.1-h81ceb04_0
   lame               conda-forge/linux-64::lame-3.100-h166bdaf_1003
-  lcms2              conda-forge/linux-64::lcms2-2.15-hfd0df8a_0
+  lcms2              conda-forge/linux-64::lcms2-2.15-haa2dc70_1
   lerc               conda-forge/linux-64::lerc-4.0.0-h27087fc_0
   libbrotlicommon    conda-forge/linux-64::libbrotlicommon-1.0.9-h166bdaf_8
   libbrotlidec       conda-forge/linux-64::libbrotlidec-1.0.9-h166bdaf_8
@@ -231,6 +231,7 @@ The following NEW packages will be INSTALLED:
   libglib            conda-forge/linux-64::libglib-2.74.1-h606061b_1
   libgpg-error       conda-forge/linux-64::libgpg-error-1.46-h620e276_0
   libiconv           conda-forge/linux-64::libiconv-1.17-h166bdaf_0
+  libjpeg-turbo      conda-forge/linux-64::libjpeg-turbo-2.1.5.1-h0b41bf4_0
   libllvm15          conda-forge/linux-64::libllvm15-15.0.7-hadd5161_0
   libogg             conda-forge/linux-64::libogg-1.3.4-h7f98852_1
   libopus            conda-forge/linux-64::libopus-1.3.1-h7f98852_1
@@ -238,7 +239,7 @@ The following NEW packages will be INSTALLED:
   libpq              conda-forge/linux-64::libpq-15.2-hb675445_0
   libsndfile         conda-forge/linux-64::libsndfile-1.2.0-hb75c966_0
   libsystemd0        conda-forge/linux-64::libsystemd0-252-h2a991cd_0
-  libtiff            conda-forge/linux-64::libtiff-4.5.0-h6adf6a1_2
+  libtiff            conda-forge/linux-64::libtiff-4.5.0-hddfeb54_5
   libtool            conda-forge/linux-64::libtool-2.4.7-h27087fc_0
   libudev1           conda-forge/linux-64::libudev1-253-h0b41bf4_0
   libvorbis          conda-forge/linux-64::libvorbis-1.3.7-h9c3ff4c_0
@@ -258,7 +259,7 @@ The following NEW packages will be INSTALLED:
   openjpeg           conda-forge/linux-64::openjpeg-2.5.0-hfec8fc6_2
   packaging          conda-forge/noarch::packaging-23.0-pyhd8ed1ab_0
   pcre2              conda-forge/linux-64::pcre2-10.40-hc3806b6_0
-  pillow             conda-forge/linux-64::pillow-9.4.0-py310h023d228_1
+  pillow             conda-forge/linux-64::pillow-9.4.0-py310h065c6d2_2
   pixman             conda-forge/linux-64::pixman-0.40.0-h36c2ea0_0
   ply                conda-forge/noarch::ply-3.11-py_1
   pthread-stubs      conda-forge/linux-64::pthread-stubs-0.4-h36c2ea0_1001
@@ -267,7 +268,7 @@ The following NEW packages will be INSTALLED:
   pyqt               conda-forge/linux-64::pyqt-5.15.7-py310hab646b1_3
   pyqt5-sip          conda-forge/linux-64::pyqt5-sip-12.11.0-py310heca2aa9_3
   python-dateutil    conda-forge/noarch::python-dateutil-2.8.2-pyhd8ed1ab_0
-  qt-main            conda-forge/linux-64::qt-main-5.15.8-h5d23da1_6
+  qt-main            conda-forge/linux-64::qt-main-5.15.8-h67dfc38_7
   sip                conda-forge/linux-64::sip-6.7.7-py310heca2aa9_0
   six                conda-forge/noarch::six-1.16.0-pyh6c4a22f_0
   toml               conda-forge/noarch::toml-0.10.2-pyhd8ed1ab_0
@@ -288,6 +289,7 @@ The following NEW packages will be INSTALLED:
   xorg-libxrender    conda-forge/linux-64::xorg-libxrender-0.9.10-h7f98852_1003
   xorg-renderproto   conda-forge/linux-64::xorg-renderproto-0.11.1-h7f98852_1002
   xorg-xextproto     conda-forge/linux-64::xorg-xextproto-7.3.0-h0b41bf4_1003
+  xorg-xf86vidmodep~ conda-forge/linux-64::xorg-xf86vidmodeproto-2.3.1-h7f98852_1002
   xorg-xproto        conda-forge/linux-64::xorg-xproto-7.0.31-h7f98852_1007
   zlib               conda-forge/linux-64::zlib-1.2.13-h166bdaf_4
 
@@ -338,4 +340,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Sunday 12 March 2023 12:20">Sunday 12 March 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Sunday 12 March 2023 18:16">Sunday 12 March 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
