--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -79,8 +79,8 @@ The following packages will be downloaded:
     fonttools-4.39.3           |  py310h1fa729e_0         2.0 MB  conda-forge
     freetype-2.12.1            |       hca18f0e_1         611 KB  conda-forge
     gettext-0.21.1             |       h27087fc_0         4.1 MB  conda-forge
-    glib-2.74.1                |       h6239696_1         474 KB  conda-forge
-    glib-tools-2.74.1          |       h6239696_1         107 KB  conda-forge
+    glib-2.76.1                |       h3eb15da_0         471 KB  conda-forge
+    glib-tools-2.76.1          |       h3eb15da_0         110 KB  conda-forge
     graphite2-1.3.13           |    h58526e2_1001         102 KB  conda-forge
     gst-plugins-base-1.22.0    |       h4243ec0_2         2.6 MB  conda-forge
     gstreamer-1.22.0           |       h25f0c4b_2         1.9 MB  conda-forge
@@ -105,7 +105,7 @@ The following packages will be downloaded:
     libexpat-2.5.0             |       hcb278e6_1          76 KB  conda-forge
     libflac-1.4.2              |       h27087fc_0         411 KB  conda-forge
     libgcrypt-1.10.1           |       h166bdaf_0         703 KB  conda-forge
-    libglib-2.74.1             |       h606061b_1         3.1 MB  conda-forge
+    libglib-2.76.1             |       ha491796_0         2.6 MB  conda-forge
     libgpg-error-1.46          |       h620e276_0         252 KB  conda-forge
     libiconv-1.17              |       h166bdaf_0         1.4 MB  conda-forge
     libjpeg-turbo-2.1.5.1      |       h0b41bf4_0         479 KB  conda-forge
@@ -169,7 +169,7 @@ The following packages will be downloaded:
     xorg-xproto-7.0.31         |    h7f98852_1007          73 KB  conda-forge
     zlib-1.2.13                |       h166bdaf_4          92 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       214.2 MB
+                                           Total:       213.6 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -192,8 +192,8 @@ The following NEW packages will be INSTALLED:
   fonttools          conda-forge/linux-64::fonttools-4.39.3-py310h1fa729e_0
   freetype           conda-forge/linux-64::freetype-2.12.1-hca18f0e_1
   gettext            conda-forge/linux-64::gettext-0.21.1-h27087fc_0
-  glib               conda-forge/linux-64::glib-2.74.1-h6239696_1
-  glib-tools         conda-forge/linux-64::glib-tools-2.74.1-h6239696_1
+  glib               conda-forge/linux-64::glib-2.76.1-h3eb15da_0
+  glib-tools         conda-forge/linux-64::glib-tools-2.76.1-h3eb15da_0
   graphite2          conda-forge/linux-64::graphite2-1.3.13-h58526e2_1001
   gst-plugins-base   conda-forge/linux-64::gst-plugins-base-1.22.0-h4243ec0_2
   gstreamer          conda-forge/linux-64::gstreamer-1.22.0-h25f0c4b_2
@@ -218,7 +218,7 @@ The following NEW packages will be INSTALLED:
   libexpat           conda-forge/linux-64::libexpat-2.5.0-hcb278e6_1
   libflac            conda-forge/linux-64::libflac-1.4.2-h27087fc_0
   libgcrypt          conda-forge/linux-64::libgcrypt-1.10.1-h166bdaf_0
-  libglib            conda-forge/linux-64::libglib-2.74.1-h606061b_1
+  libglib            conda-forge/linux-64::libglib-2.76.1-ha491796_0
   libgpg-error       conda-forge/linux-64::libgpg-error-1.46-h620e276_0
   libiconv           conda-forge/linux-64::libiconv-1.17-h166bdaf_0
   libjpeg-turbo      conda-forge/linux-64::libjpeg-turbo-2.1.5.1-h0b41bf4_0
@@ -329,4 +329,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Tuesday 18 April 2023 00:42">Tuesday 18 April 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Tuesday 18 April 2023 06:16">Tuesday 18 April 2023</span>. Using Julia version 1.8.5.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
